--- a/Recommendation_From_Spotify_Data.ipynb
+++ b/Recommendation_From_Spotify_Data.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4       0.0380  101.665  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -382,12 +382,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading the data (playlist data)"
+    "## Reading/Formating the data (playlist data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -419,20 +419,20 @@
     }
    ],
    "source": [
-    "playlist_data.info()\n",
-    "print(playlist_data.columns)\n"
+    "playlist_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['user_id', 'artists', 'name', 'playlistname'], dtype='object')\n"
+      "Index(['user_id', 'artists', 'name', 'playlistname'], dtype='object')\n",
+      "Number of different music-artist pairs: 2790788\n"
      ]
     }
    ],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -489,38 +489,111 @@
    "source": [
     "merged_data = pd.merge(playlist_data[['artists', 'name', 'playlistname', 'user_id']], spotify_data, left_on=['artists', 'name'], right_on=['artists', 'name'])\n",
     "merged_data = merged_data[['artists', 'name', 'playlistname', 'user_id', 'valence', 'year', 'acousticness', 'danceability', 'duration_ms', 'energy', 'explicit', 'instrumentalness', 'key', 'liveness', 'loudness', 'mode', 'popularity', 'speechiness', 'tempo']]\n",
-    "merged_data.info()\n"
+    "merged_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deleting duplicates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             artists                   name      playlistname\n",
-      "188   Elvis Costello                 Alison  Liked from Radio\n",
-      "190   Elvis Costello                 Alison           Starred\n",
-      "365    Crowded House  Don't Dream It's Over  Liked from Radio\n",
-      "376    Crowded House  Don't Dream It's Over           Starred\n",
-      "381    Crowded House  Don't Dream It's Over       My Playlist\n",
-      "476    Crowded House  Don't Dream It's Over       Purchased 1\n",
-      "649    Crowded House  Don't Dream It's Over               90s\n",
-      "1060    Joshua Radin               Only You           Starred\n",
-      "1061    Joshua Radin               Only You  Liked from Radio\n",
-      "1103    Joshua Radin               Only You       My Playlist\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2056240 entries, 0 to 2056239\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column            Dtype  \n",
+      "---  ------            -----  \n",
+      " 0   artists           object \n",
+      " 1   name              object \n",
+      " 2   playlistname      object \n",
+      " 3   user_id           object \n",
+      " 4   valence           float64\n",
+      " 5   year              int64  \n",
+      " 6   acousticness      float64\n",
+      " 7   danceability      float64\n",
+      " 8   duration_ms       int64  \n",
+      " 9   energy            float64\n",
+      " 10  explicit          int64  \n",
+      " 11  instrumentalness  float64\n",
+      " 12  key               int64  \n",
+      " 13  liveness          float64\n",
+      " 14  loudness          float64\n",
+      " 15  mode              int64  \n",
+      " 16  popularity        int64  \n",
+      " 17  speechiness       float64\n",
+      " 18  tempo             float64\n",
+      "dtypes: float64(9), int64(6), object(4)\n",
+      "memory usage: 298.1+ MB\n"
      ]
     }
    ],
    "source": [
     "merged_data = merged_data.drop_duplicates(subset=['name', 'artists', 'playlistname'])\n",
-    "merged_data = merged_data.reset_index(drop=True)\n",
-    "#merged_data.info()\n",
-    "duplicates = merged_data[merged_data.duplicated(subset=['name', 'playlistname'], keep=False)]\n",
-    "print(duplicates.iloc[:10, :3])\n"
+    "merged_data = merged_data.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Info about data_playlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of different playlists: 92920\n",
+      "Number of different music-artist pairs: 63269\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2056240 entries, 0 to 2056239\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column            Dtype  \n",
+      "---  ------            -----  \n",
+      " 0   artists           object \n",
+      " 1   name              object \n",
+      " 2   playlistname      object \n",
+      " 3   user_id           object \n",
+      " 4   valence           float64\n",
+      " 5   year              int64  \n",
+      " 6   acousticness      float64\n",
+      " 7   danceability      float64\n",
+      " 8   duration_ms       int64  \n",
+      " 9   energy            float64\n",
+      " 10  explicit          int64  \n",
+      " 11  instrumentalness  float64\n",
+      " 12  key               int64  \n",
+      " 13  liveness          float64\n",
+      " 14  loudness          float64\n",
+      " 15  mode              int64  \n",
+      " 16  popularity        int64  \n",
+      " 17  speechiness       float64\n",
+      " 18  tempo             float64\n",
+      "dtypes: float64(9), int64(6), object(4)\n",
+      "memory usage: 298.1+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of different playlists:\", merged_data['playlistname'].nunique())\n",
+    "print(\"Number of different music-artist pairs:\", merged_data.groupby(['name', 'artists']).ngroups)\n",
+    "print(merged_data.info())"
    ]
   },
   {
@@ -559,7 +632,36 @@
     "music_artist_counts = music_artist_counts.sort_values(by='count', ascending=False)\n",
     "\n",
     "# display the top 10 most common music-artist pairs\n",
-    "print(music_artist_counts.head(10))\n"
+    "print(music_artist_counts.head(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting data_playlist into data_playlist2 & data_playlist_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1028120, 1028120)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "merged_data2, merged_data_test = train_test_split(merged_data, test_size=0.5, random_state=42)\n",
+    "len(merged_data2), len(merged_data_test)"
    ]
   },
   {
