--- a/Recommendation_From_Spotify_Data.ipynb
+++ b/Recommendation_From_Spotify_Data.ipynb
@@ -644,24 +644,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1028120, 1028120)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of lines in train_data: 1008560\n",
+      "Number of lines in test_data: 1047680\n",
+      "Number of unique playlists in train_data: 46460\n",
+      "Number of unique playlists in test_data: 46460\n"
+     ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "merged_data2, merged_data_test = train_test_split(merged_data, test_size=0.5, random_state=42)\n",
-    "len(merged_data2), len(merged_data_test)"
+    "# Get a list of unique 'playlistname'\n",
+    "unique_playlists = merged_data['playlistname'].unique()\n",
+    "\n",
+    "# Shuffle the list\n",
+    "np.random.shuffle(unique_playlists)\n",
+    "\n",
+    "# Split the list of unique 'playlistname' into two\n",
+    "half = len(unique_playlists) // 2\n",
+    "first_half_playlists = unique_playlists[:half]\n",
+    "second_half_playlists = unique_playlists[half:]\n",
+    "\n",
+    "# Filter the original DataFrame to get two DataFrames\n",
+    "train_data = merged_data[merged_data['playlistname'].isin(first_half_playlists)]\n",
+    "test_data = merged_data[merged_data['playlistname'].isin(second_half_playlists)]\n",
+    "\n",
+    "# Display the number of lines in each DataFrame\n",
+    "print('Number of lines in train_data:', len(train_data))\n",
+    "print('Number of lines in test_data:', len(test_data))\n",
+    "\n",
+    "# Display the number of unique 'playlistname' in each DataFrame\n",
+    "print('Number of unique playlists in train_data:', train_data['playlistname'].nunique())\n",
+    "print('Number of unique playlists in test_data:', test_data['playlistname'].nunique())"
    ]
   },
   {
@@ -1534,27 +1553,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Building a Content-Based Recommender System"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "    "
    ]
   },
   {
@@ -1626,20 +1628,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 166,
    "metadata": {},
    "outputs": [
@@ -1675,7 +1663,7 @@
     }
    ],
    "source": [
-    "recommend_songs([{'name': \"Tyler Herro\", 'year': 2020}], spotify_data)\n"
+    "recommend_songs([{'name': \"Tyler Herro\", 'year': 2020}], spotify_data)"
    ]
   }
  ],
