--- a/Dataset_Preparation.ipynb
+++ b/Dataset_Preparation.ipynb
@@ -8,10 +8,149 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import os\n",
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyOAuth\n",
+    "import csv\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from collections import defaultdict\n",
+    "from sklearn.metrics import euclidean_distances\n",
+    "from scipy.spatial.distance import cdist\n",
+    "import time\n",
+    "from spotipy import SpotifyException\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retirer les colonnes inutiles et les doublons"
+    "## Retirer colonnes inutiles et doublons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compter le nombre de playlists\n",
+    "csv_filename = 'data/spotify_dataset.csv'\n",
+    "\n",
+    "df = pd.read_csv(csv_filename, on_bad_lines='skip')\n",
+    "\n",
+    "# Clean column names by removing leading/trailing spaces and double quotes\n",
+    "df.columns = df.columns.str.strip().str.replace('\"', '')\n",
+    "\n",
+    "# Drop rows with missing values\n",
+    "df_cleaned = df.dropna()\n",
+    "\n",
+    "# Remove duplicate rows\n",
+    "df_cleaned = df_cleaned.drop_duplicates()\n",
+    "\n",
+    "df_cleaned = df_cleaned.drop('user_id', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>artistname</th>\n",
+       "      <th>trackname</th>\n",
+       "      <th>playlistname</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Elvis Costello</td>\n",
+       "      <td>(The Angels Wanna Wear My) Red Shoes</td>\n",
+       "      <td>HARD ROCK 2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Elvis Costello &amp; The Attractions</td>\n",
+       "      <td>(What's So Funny 'Bout) Peace, Love And Unders...</td>\n",
+       "      <td>HARD ROCK 2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tiffany Page</td>\n",
+       "      <td>7 Years Too Late</td>\n",
+       "      <td>HARD ROCK 2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Elvis Costello &amp; The Attractions</td>\n",
+       "      <td>Accidents Will Happen</td>\n",
+       "      <td>HARD ROCK 2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Elvis Costello</td>\n",
+       "      <td>Alison</td>\n",
+       "      <td>HARD ROCK 2010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         artistname  \\\n",
+       "0                    Elvis Costello   \n",
+       "1  Elvis Costello & The Attractions   \n",
+       "2                      Tiffany Page   \n",
+       "3  Elvis Costello & The Attractions   \n",
+       "4                    Elvis Costello   \n",
+       "\n",
+       "                                           trackname    playlistname  \n",
+       "0               (The Angels Wanna Wear My) Red Shoes  HARD ROCK 2010  \n",
+       "1  (What's So Funny 'Bout) Peace, Love And Unders...  HARD ROCK 2010  \n",
+       "2                                   7 Years Too Late  HARD ROCK 2010  \n",
+       "3                              Accidents Will Happen  HARD ROCK 2010  \n",
+       "4                                             Alison  HARD ROCK 2010  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_cleaned.head()"
    ]
   },
   {
@@ -19,22 +158,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Garder uniquement les plus grosses playlists du dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# en paramètre : la taille minimal des playlist à garder"
+    "print(df['playlistname'].value_counts()['HARD ROCK 2010'])"
    ]
   },
   {
@@ -69,8 +194,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
