--- a/Dataset_Preparation.ipynb
+++ b/Dataset_Preparation.ipynb
@@ -9,27 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import os\n",
-    "import spotipy\n",
-    "from spotipy.oauth2 import SpotifyOAuth\n",
-    "import csv\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from collections import defaultdict\n",
-    "from sklearn.metrics import euclidean_distances\n",
-    "from scipy.spatial.distance import cdist\n",
-    "import time\n",
-    "from spotipy import SpotifyException\n",
-    "%matplotlib inline"
+    "import csv"
    ]
   },
   {
@@ -41,30 +27,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# compter le nombre de playlists\n",
     "csv_filename = 'data/spotify_dataset.csv'\n",
     "\n",
     "df = pd.read_csv(csv_filename, on_bad_lines='skip')\n",
     "\n",
-    "# Clean column names by removing leading/trailing spaces and double quotes\n",
     "df.columns = df.columns.str.strip().str.replace('\"', '')\n",
-    "\n",
-    "# Drop rows with missing values\n",
     "df_cleaned = df.dropna()\n",
-    "\n",
-    "# Remove duplicate rows\n",
     "df_cleaned = df_cleaned.drop_duplicates()\n",
     "\n",
+    "# Ajouter l'id de l'user aux playlists 'Starred' et 'Liked from Radio'\n",
+    "def update_playlist_name(row):\n",
+    "    if row['playlistname'] == 'Starred':\n",
+    "        return row['playlistname'] + row['user_id']\n",
+    "    elif row['playlistname'] == 'Liked from Radio':\n",
+    "        return row['playlistname'] + row['user_id']\n",
+    "    return row['playlistname']\n",
+    "\n",
+    "# Appliquer la fonction à chaque ligne du DataFrame\n",
+    "df_cleaned['playlistname'] = df_cleaned.apply(update_playlist_name, axis=1)\n",
+    "\n",
+    "# la colonne user_id n'est pas utile\n",
     "df_cleaned = df_cleaned.drop('user_id', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +136,7 @@
        "4                                             Alison  HARD ROCK 2010  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,11 +147,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       artistname trackname                             playlistname\n",
+      "count    12856828  12856828                                 12856828\n",
+      "unique     289602   2004520                                   165459\n",
+      "top     Daft Punk     Intro  Starred4398de6902abde3351347b048fcdc287\n",
+      "freq        36086      6675                                    47362\n"
+     ]
+    }
+   ],
    "source": [
-    "print(df['playlistname'].value_counts()['HARD ROCK 2010'])"
+    "print(df_cleaned.describe())"
    ]
   },
   {
