compter nombre de playlists

--- a/Dataset_Preparation.ipynb
+++ b/Dataset_Preparation.ipynb
@@ -170,6 +170,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Compter le nombre de colonnes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum frequency: 1\n",
+      "Maximum frequency: 47362\n",
+      "Average frequency: 77.70401126563075\n",
+      "Median frequency: 20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "value_counts = df_cleaned['playlistname'].value_counts()\n",
+    "\n",
+    "min_frequency = value_counts.min()\n",
+    "max_frequency = value_counts.max()\n",
+    "average = value_counts.mean()\n",
+    "median = value_counts.median()\n",
+    "\n",
+    "print(\"Minimum frequency:\", min_frequency)\n",
+    "print(\"Maximum frequency:\", max_frequency)\n",
+    "print(\"Average frequency:\", average)\n",
+    "print(\"Median frequency:\", median)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Récupérer les caractéristiques des sons grâce à l'API de Spotify"
    ]
   },
