--- a/Dataset_Preparation.ipynb
+++ b/Dataset_Preparation.ipynb
@@ -9,13 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import csv"
+    "import csv\n",
+    "import spotipy\n",
+    "from spotipy.oauth2 import SpotifyOAuth\n",
+    "from spotipy import SpotifyException"
    ]
   },
   {
@@ -27,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +139,7 @@
        "4                                             Alison  HARD ROCK 2010  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +210,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Enlever les playlists qui ont moins de sons que la valeur médiane "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       artistname trackname                             playlistname\n",
+      "count    11972305  11972305                                 11972305\n",
+      "unique     276342   1900562                                    81916\n",
+      "top     Daft Punk     Intro  Starred4398de6902abde3351347b048fcdc287\n",
+      "freq        34553      5859                                    47362\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtered_df = df_cleaned.groupby('playlistname').filter(lambda x: len(x) > median)\n",
+    "print(filtered_df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum frequency: 21\n",
+      "Maximum frequency: 47362\n",
+      "Average frequency: 146.1534376678549\n",
+      "Median frequency: 51.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "value_counts = filtered_df['playlistname'].value_counts()\n",
+    "\n",
+    "min_frequency = value_counts.min()\n",
+    "max_frequency = value_counts.max()\n",
+    "average = value_counts.mean()\n",
+    "median = value_counts.median()\n",
+    "\n",
+    "print(\"Minimum frequency:\", min_frequency)\n",
+    "print(\"Maximum frequency:\", max_frequency)\n",
+    "print(\"Average frequency:\", average)\n",
+    "print(\"Median frequency:\", median)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Récupérer les caractéristiques des sons grâce à l'API de Spotify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### credentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client_id = 'client id'\n",
+    "client_secret = 'cleint secret'\n",
+    "redirect_uri = 'http://localhost:8888/callback'\n",
+    "\n",
+    "spotify_client = spotipy.Spotify(auth_manager=SpotifyOAuth(client_id=client_id, client_secret=client_secret, redirect_uri=redirect_uri, scope='user-library-read playlist-modify-public'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = filtered_df.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': '08F16baYbciTva9P4BvpiI', 'name': 'MAFIA', 'artists': 'Travis Scott', 'key': 0, 'danceability': 0.855, 'liveness': 0.111, 'valence': 0.385, 'year': '2021', 'acousticness': 0.0775, 'duration_ms': 240000, 'energy': 0.492, 'explicit': 1, 'instrumentalness': 6.71e-06, 'loudness': -7.578, 'mode': 0, 'popularity': 69, 'speechiness': 0.0483, 'tempo': 109.975, 'release_date': '2021-11-05'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pas encore prêt\n",
+    "def get_track_features(track_name, artist_name):\n",
+    "    song_data = []\n",
+    "\n",
+    "    results = spotify_client.search(q=f'track:{track_name} artist:{artist_name}', type='track', limit=1)\n",
+    "\n",
+    "    if results['tracks']['items']:\n",
+    "        track_id = results['tracks']['items'][0]['id']\n",
+    "        audio_feature = spotify_client.audio_features(track_id)[0]\n",
+    "        details = spotify_client.track(track_id)\n",
+    "        artists = ', '.join([artist['name'] for artist in details['artists']])\n",
+    "\n",
+    "        song_info = {\n",
+    "            'id': track_id,\n",
+    "            'name': track_name,\n",
+    "            'artists': artists,\n",
+    "            'key': audio_feature['key'],\n",
+    "            'danceability': audio_feature['danceability'],\n",
+    "            'liveness': audio_feature['liveness'],\n",
+    "            'valence': audio_feature['valence'],\n",
+    "            'year': details['album']['release_date'][:4],\n",
+    "            'acousticness': audio_feature['acousticness'],\n",
+    "            'duration_ms': audio_feature['duration_ms'],\n",
+    "            'energy': audio_feature['energy'],\n",
+    "            'explicit': int(details['explicit']),\n",
+    "            'instrumentalness': audio_feature['instrumentalness'],\n",
+    "            'loudness': audio_feature['loudness'],\n",
+    "            'mode': audio_feature['mode'],\n",
+    "            'popularity': details['popularity'],\n",
+    "            'speechiness': audio_feature['speechiness'],\n",
+    "            'tempo': audio_feature['tempo'],\n",
+    "            'release_date': details['album']['release_date']\n",
+    "        }\n",
+    "\n",
+    "        song_data.append(song_info)"
    ]
   },
   {
