export du dataset nettoyé et préparé dans un fichier csv pret à l'usage

--- a/Dataset_Preparation.ipynb
+++ b/Dataset_Preparation.ipynb
@@ -590,6 +590,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export du df préparé dans un csv pour pouvoir l'utiliser dans un autre fichier\n",
+    "test_df.to_csv('data/prepared_data.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
