--- a/Dataset_Preparation.ipynb
+++ b/Dataset_Preparation.ipynb
@@ -612,26 +612,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_df.head(1)\n",
+    "test_df.head(1)\n",
     "\n",
-    "# # copie du dataframe\n",
-    "# copy_test_df = test_df.copy()\n",
+    "# copie du dataframe\n",
+    "copy_test_df = test_df.copy()\n",
     "\n",
-    "# print(\"colonnes avant : \\n\", copy_test_df.columns)\n",
+    "print(\"colonnes avant : \\n\", copy_test_df.columns)\n",
     "\n",
-    "# # Ajout une colonne URI\n",
-    "# def get_track_uri(track_name, artist_name, spotify_client):\n",
-    "#     results = spotify_client.search(q=f'track:{track_name} artist:{artist_name}', type='track', limit=1)\n",
-    "#     if results['tracks']['items']:\n",
-    "#         track_uri = results['tracks']['items'][0]['uri']\n",
-    "#         return track_uri\n",
-    "#     else:\n",
-    "#         return None\n",
+    "# Ajout une colonne URI\n",
+    "def get_track_uri(track_name, artist_name, spotify_client):\n",
+    "    results = spotify_client.search(q=f'track:{track_name} artist:{artist_name}', type='track', limit=1)\n",
+    "    if results['tracks']['items']:\n",
+    "        track_uri = results['tracks']['items'][0]['uri']\n",
+    "        return track_uri\n",
+    "    else:\n",
+    "        return None\n",
     "\n",
-    "# # Ajouter une colonne 'uri' contenant les identifiants URI dans copy_test_df\n",
-    "# copy_test_df['uri'] = copy_test_df.apply(lambda row: get_track_uri(row['trackname'], row['artistname'], spotify_client), axis=1)\n",
+    "# Ajouter une colonne 'uri' contenant les identifiants URI dans copy_test_df\n",
+    "copy_test_df['uri'] = copy_test_df.apply(lambda row: get_track_uri(row['trackname'], row['artistname'], spotify_client), axis=1)\n",
     "\n",
-    "# print(\"colonnes apères : \\n \", copy_test_df.columns)\n"
+    "print(\"colonnes apères : \\n \", copy_test_df.columns)\n"
    ]
   },
   {
@@ -749,8 +749,8 @@
     }
    ],
    "source": [
-    "# print(copy_test_df.columns)\n",
-    "# copy_test_df.head(1)"
+    "print(copy_test_df.columns)\n",
+    "copy_test_df.head(1)"
    ]
   },
   {
@@ -787,18 +787,18 @@
     }
    ],
    "source": [
-    "# spotify_data = pd.read_csv('./data/data.csv.zip')\n",
+    "spotify_data = pd.read_csv('./data/data.csv.zip')\n",
     "\n",
-    "# # Data format\n",
-    "# spotify_data['artists'] = spotify_data['artists'].str.replace(\"['\", \"\", regex=False)\n",
-    "# spotify_data['artists'] = spotify_data['artists'].str.replace(\"']\", \"\", regex=False)\n",
-    "# spotify_data['artists'] = spotify_data['artists'].str.replace(\"'\", \"\", regex=False)\n",
+    "# Data format\n",
+    "spotify_data['artists'] = spotify_data['artists'].str.replace(\"['\", \"\", regex=False)\n",
+    "spotify_data['artists'] = spotify_data['artists'].str.replace(\"']\", \"\", regex=False)\n",
+    "spotify_data['artists'] = spotify_data['artists'].str.replace(\"'\", \"\", regex=False)\n",
     "\n",
-    "# spotify_data = spotify_data.rename(columns=lambda x: x.strip().replace('\"', ''))\n",
-    "# spotify_data = spotify_data.rename(columns={'name': 'trackname', 'artists': 'artistname'})\n",
+    "spotify_data = spotify_data.rename(columns=lambda x: x.strip().replace('\"', ''))\n",
+    "spotify_data = spotify_data.rename(columns={'name': 'trackname', 'artists': 'artistname'})\n",
     "\n",
-    "# print(\"taille : \", len(spotify_data))\n",
-    "# print(\"colonnes avant : \\n\", spotify_data.columns)"
+    "print(\"taille : \", len(spotify_data))\n",
+    "print(\"colonnes avant : \\n\", spotify_data.columns)"
    ]
   },
   {
@@ -839,15 +839,15 @@
     }
    ],
    "source": [
-    "# # copie du dataframe mais que les 5 premiers sons\n",
-    "# copy_spotify_data = spotify_data.head(10)\n",
-    "# print(\"taille de spotify_data :\", len(copy_spotify_data))\n",
-    "# print(\"colonnes avant : \\n\", copy_spotify_data.columns)\n",
+    "# copie du dataframe mais que les 5 premiers sons\n",
+    "copy_spotify_data = spotify_data.head(10)\n",
+    "print(\"taille de spotify_data :\", len(copy_spotify_data))\n",
+    "print(\"colonnes avant : \\n\", copy_spotify_data.columns)\n",
     "\n",
-    "# # Ajouter une colonne 'uri' contenant les identifiants URI dans copy_spotify_data\n",
-    "# copy_spotify_data['uri'] = copy_spotify_data.apply(lambda row: get_track_uri(row['trackname'], row['artistname'], spotify_client), axis=1)\n",
+    "# Ajouter une colonne 'uri' contenant les identifiants URI dans copy_spotify_data\n",
+    "copy_spotify_data['uri'] = copy_spotify_data.apply(lambda row: get_track_uri(row['trackname'], row['artistname'], spotify_client), axis=1)\n",
     "\n",
-    "# print(\"colonnes après : \\n\", copy_spotify_data.columns)"
+    "print(\"colonnes après : \\n\", copy_spotify_data.columns)"
    ]
   },
   {
@@ -952,7 +952,7 @@
     }
    ],
    "source": [
-    "# copy_spotify_data.head(1)"
+    "copy_spotify_data.head(1)"
    ]
   },
   {
