5000 lines data set + random model + two variations of recommandation model

--- a/Dataset_Preparation.ipynb
+++ b/Dataset_Preparation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "4                                             Alison  HARD ROCK 2010  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
        "11972305"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -464,19 +464,19 @@
        "9                                        Bright Side  HARD ROCK 2010  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_df = filtered_df.head(1000) # 1000 sons = 3-4 minutes pour avoir les ids\n",
+    "test_df = filtered_df.head(5000) # 1000 sons = 3-4 minutes pour avoir les ids\n",
     "test_df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,40 +499,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                              user_id                        artistname  \\\n",
-      "0    9cc0cfd4d7d7885102480dd99e7a90d6                    Elvis Costello   \n",
-      "1    9cc0cfd4d7d7885102480dd99e7a90d6  Elvis Costello & The Attractions   \n",
-      "2    9cc0cfd4d7d7885102480dd99e7a90d6  Elvis Costello & The Attractions   \n",
-      "3    9cc0cfd4d7d7885102480dd99e7a90d6                    Elvis Costello   \n",
-      "4    9cc0cfd4d7d7885102480dd99e7a90d6                            Lissie   \n",
-      "..                                ...                               ...   \n",
-      "885  07f0fc3be95dcd878966b1f9572ff670                          Deftones   \n",
-      "886  07f0fc3be95dcd878966b1f9572ff670                        Audioslave   \n",
-      "887  07f0fc3be95dcd878966b1f9572ff670                            John 5   \n",
-      "888  07f0fc3be95dcd878966b1f9572ff670                               C2C   \n",
-      "889  07f0fc3be95dcd878966b1f9572ff670                 Infected Mushroom   \n",
+      "                               user_id                        artistname  \\\n",
+      "0     9cc0cfd4d7d7885102480dd99e7a90d6                    Elvis Costello   \n",
+      "1     9cc0cfd4d7d7885102480dd99e7a90d6  Elvis Costello & The Attractions   \n",
+      "2     9cc0cfd4d7d7885102480dd99e7a90d6  Elvis Costello & The Attractions   \n",
+      "3     9cc0cfd4d7d7885102480dd99e7a90d6                    Elvis Costello   \n",
+      "4     9cc0cfd4d7d7885102480dd99e7a90d6                            Lissie   \n",
+      "...                                ...                               ...   \n",
+      "4479  c50566d83fba17b20697039d5824db78                        Loosegoats   \n",
+      "4480  c50566d83fba17b20697039d5824db78                          The Cars   \n",
+      "4481  c50566d83fba17b20697039d5824db78          The All-American Rejects   \n",
+      "4482  c50566d83fba17b20697039d5824db78                               BOY   \n",
+      "4483  c50566d83fba17b20697039d5824db78                    Lisa Miskovsky   \n",
       "\n",
-      "                                             trackname    playlistname  \n",
-      "0                 (The Angels Wanna Wear My) Red Shoes  HARD ROCK 2010  \n",
-      "1    (What's So Funny 'Bout) Peace, Love And Unders...  HARD ROCK 2010  \n",
-      "2                                Accidents Will Happen  HARD ROCK 2010  \n",
-      "3                                               Alison  HARD ROCK 2010  \n",
-      "4                                          All Be Okay  HARD ROCK 2010  \n",
-      "..                                                 ...             ...  \n",
-      "885                      Be Quiet And Drive [Far Away]   Work playlist  \n",
-      "886                                        Be Yourself   Work playlist  \n",
-      "887                                            Beat It   Work playlist  \n",
-      "888                                     Because Of You   Work playlist  \n",
-      "889                                    Becoming Insane   Work playlist  \n",
+      "                                              trackname        playlistname  \n",
+      "0                  (The Angels Wanna Wear My) Red Shoes      HARD ROCK 2010  \n",
+      "1     (What's So Funny 'Bout) Peace, Love And Unders...      HARD ROCK 2010  \n",
+      "2                                 Accidents Will Happen      HARD ROCK 2010  \n",
+      "3                                                Alison      HARD ROCK 2010  \n",
+      "4                                           All Be Okay      HARD ROCK 2010  \n",
+      "...                                                 ...                 ...  \n",
+      "4479                              Drinking by the river  Everything at once  \n",
+      "4480                                              Drive  Everything at once  \n",
+      "4481                                         Drive Away  Everything at once  \n",
+      "4482                                      Drive Darling  Everything at once  \n",
+      "4483                           Driving One Of Your Cars  Everything at once  \n",
       "\n",
-      "[890 rows x 4 columns]\n"
+      "[4484 rows x 4 columns]\n"
      ]
     }
    ],
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,14 +595,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "890\n"
+      "4484\n"
      ]
     },
     {
@@ -717,7 +717,7 @@
        "      <td>0.00342</td>\n",
        "      <td>-11.115</td>\n",
        "      <td>1</td>\n",
-       "      <td>37</td>\n",
+       "      <td>36</td>\n",
        "      <td>0.0276</td>\n",
        "      <td>120.077</td>\n",
        "      <td>1979-01-05</td>\n",
@@ -807,14 +807,14 @@
        "  mode popularity speechiness    tempo release_date  \n",
        "0    1         38      0.0491  134.768   1977-07-22  \n",
        "1    1         39      0.0803   142.34   2020-11-06  \n",
-       "2    1         37      0.0276  120.077   1979-01-05  \n",
+       "2    1         36      0.0276  120.077   1979-01-05  \n",
        "3    0         52      0.0438  176.647   1977-07-22  \n",
        "4    1          6      0.0309  122.084   2021-06-04  \n",
        "\n",
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
